# exotracker-cpp

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_user_begin.cmake.example  cmake_user_override.cmake.example  exotracker.pro  generate-serializer.sh  lenses.md  meson.build
blip_buffer_gui/: main.cpp
blip_resampler/: main.cpp
ci/: build_appveyor.py
cmake/: lib.cmake
detail/rbts/: rbtree.hpp  rrbtree.hpp
precompiled_headers/: exotracker_bin.h  exotracker_lib.h
res/: COPYING  exotracker.qrc
src/: DESIGN.md  audio.h  audio_cmd.cpp  audio_cmd.h  audio_gui_common.h  chip_common.cpp  chip_common.h  chip_kinds.cpp  chip_kinds.h  cmd_queue.cpp  cmd_queue.h  doc.cpp  doc.h  doc_common.h  document.cpp  document.h  edit_common.h  gui_common.h  locked_doc.h  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  sample_docs.cpp  sample_docs.h  serialize.cpp  serialize.h  serialize_main.cpp  spc_export.cpp  spc_export.h  timeline_iter.cpp  timeline_iter.h  timing_common.cpp  timing_common.h  util.h  win32_fonts.h
src/audio/: DESIGN.md  audio.cpp  audio.h  audio_common.cpp  audio_common.h  callback.h  chips.h  event_queue.cpp  event_queue.h  make_blip_buffer.cpp  make_blip_buffer.h  output.cpp  output.h  synth.cpp  synth.h  synth_common.cpp  synth_common.h  tempo_calc.cpp  tempo_calc.h
src/audio/synth/: chip_instance_common.cpp  chip_instance_common.h  chip_kinds_common.cpp  chip_kinds_common.h  envelope.cpp  envelope.h  impl_chip_common.h  music_driver.cpp  music_driver.h  music_driver_common.cpp  music_driver_common.h  music_engine.cpp  music_engine.h  music_engine_common.cpp  music_engine_common.h  nes_2a03.cpp  nes_2a03.h  nes_2a03_driver.cpp  nes_2a03_driver.h  nes_instance_common.h  sequencer.cpp  sequencer.h  sequencer_driver_common.h  spc700.cpp  spc700.h  spc700_driver.cpp  spc700_driver.h  spc700_math.h  spc700_p.h  spc700_synth.cpp  spc700_synth.h  volume_calc_common.cpp  volume_calc_common.h
src/audio/synth/music_driver/: driver_2a03.cpp  driver_2a03.h  nes_2a03.cpp  nes_2a03.h
src/audio/synth/music_engine/: nes_2a03.cpp  nes_2a03.h
src/doc/: accidental_common.h  effect_names.h  event_list.h  events.cpp  events.h  gui_traits.cpp  gui_traits.h  instr.h  kv.cpp  kv.h  sample.h  sequence.h  timed_events.cpp  timed_events.h  timeline.cpp  timeline.h  validate.cpp  validate.h  validate_common.h
src/doc_util/: event_builder.h  event_search.cpp  event_search.h  kv.cpp  kv.h  sample_instrs.cpp  sample_instrs.h  shorthand.h  time_util.cpp  time_util.h  track_util.cpp  track_util.h
src/edit/: edit_doc.cpp  edit_doc.h  edit_impl.h  edit_instr.cpp  edit_instr.h  edit_instr_list.cpp  edit_instr_list.h  edit_pattern.cpp  edit_pattern.h  edit_sample.cpp  edit_sample.h  edit_sample_list.cpp  edit_sample_list.h  modified.h  modified_common.h  pattern.cpp  pattern.h
src/edit_util/: kv.cpp  kv.h  shorthand.h
src/gui/: app.cpp  app.h  command_common.cpp  command_common.h  config.cpp  config.h  cursor.h  document_history.cpp  document_history.h  gui_time.cpp  gui_time.h  history.cpp  history.h  instr_dialog.cpp  instr_dialog.h  instr_list.cpp  instr_list.h  instrument_dialog.cpp  instrument_dialog.h  instrument_list.cpp  instrument_list.h  layout_stack.cpp  layout_stack.h  lightweight.h  lol_dialog.cpp  lol_dialog.h  lol_dialog.ui  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow_view.h  move_cursor.cpp  move_cursor.h  pattern_editor.cpp  pattern_editor.h  sample_dialog.cpp  sample_dialog.h  sample_list.cpp  sample_list.h  (+4 more)
src/gui/config/: block_config.h  cursor.h  cursor_config.h
src/gui/instr_dialog/: adsr_graph.cpp  adsr_graph.h
src/gui/instrument_dialog/: adsr_graph.cpp  adsr_graph.h
src/gui/lib/: color.cpp  color.h  docs_palette.cpp  docs_palette.h  dpi.h  format.cpp  format.h  icon_toolbar.cpp  icon_toolbar.h  icons.cpp  icons.h  instr_warnings.cpp  instr_warnings.h  layout_macros.h  lightweight.h  list_warnings.cpp  list_warnings.h  note_spinbox.cpp  note_spinbox.h  painter_ext.cpp  painter_ext.h  parse_note.cpp  parse_note.h  persistent_dialog.cpp  persistent_dialog.h  qt6.h  sample_text.cpp  sample_text.h  small_button.h
src/gui/pattern_editor/: pattern_editor_panel.cpp  pattern_editor_panel.h
src/sequencer/: sequencer.h
src/serialize/: document.capnp  document.capnp.c++  document.capnp.h
src/spc_export/: README.md  driver.cpp  driver.h  generate-spc-driver.sh  link.cpp  link.h
src/spc_export/driver/: SPCBase.inc  SPCDSPBase.inc  main.inc
src/util/: bit.h  box_array.h  compare.h  compare_impl.h  constinit.h  copy_move.h  distance.h  enum_flags.h  enum_map.h  enumerate.h  expr.h  format.cpp  format.h  loop.h  macros.h  math.h  reverse.h  safe_typedef.h  sync.cpp  sync.h  typeid_cast.h  unwrap.h  variant_cast.h
tests/: test_blip_buffer.cpp  test_box_array.cpp  test_document.cpp  test_edit_history.cpp  test_math.cpp
tests/audio/: test_event_queue.cpp  test_sequencer.cpp  test_synth.cpp
tests/test_utils/: parameterize.cpp  parameterize.h  test_parameterize.cpp
